[tool.poetry]
name        = "MonitorKit"
version     = "0.0"
description = "Generating MonitorKit documentation."
authors     = ["CloudOps and Engineering <cloud@mheducation.com>"]

  [tool.poetry.dependencies]
  python                                    = "^3.8"
  mkdocs                                    = "^1.1.2"
  mkdocs-git-revision-date-localized-plugin = "^0.7.2"
  mkdocs-git-revision-date-plugin           = "^0.3"
  mkdocs-material                           = "^6.0.1"
  mkdocs-material-extensions                = "^1.0.1"
  mkdocs-pymdownx-material-extras           = "^1.1.1"
  pymdown-extensions                        = "^8.0.1"
  mkdocs-macros-plugin                      = "^0.4.18"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
